--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -1,4 +1,22 @@
 services:
+
+    server:
+        image: todo-backend-dev
+        build:
+            context: .
+            dockerfile: dev.Dockerfile
+        volumes:
+            - ./:/usr/src/app
+        ports:
+            - 3000:3000
+        environment:
+            - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+            - REDIS_URL=redis://redis:6379
+        container_name: todo-backend-dev
+        depends_on:
+            - mongo
+            - redis
+
     mongo:
         image: mongo
         ports:
@@ -9,6 +27,7 @@ services:
             MONGO_INITDB_DATABASE: the_database
         volumes:
             - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+            
     redis:
         image: redis
         ports:
