--- a/todo-app/nginx.dev.conf
+++ b/todo-app/nginx.dev.conf
@@ -10,5 +10,9 @@ events { }
         proxy_set_header Connection 'upgrade';
         proxy_pass http://app:5173;
       }
+
+      location /api/ {
+        proxy_pass http://server:3000/;
+      }
     }
   }
