--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: dev.Dockerfile
     volumes:
       - ./todo-frontend:/usr/src/app
+    environment:
+      - VITE_BACKEND_URL=/api
 
   server:
     image: todo-backend-dev
